syntax = "proto3";

package blog;


service BlogService {
  // All API

  rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse) {};

  rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {};

  rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {};

  rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {};

  rpc ListBlogs (ListBlogRequest) returns (stream ListBlogResponse) {};

}

message DeleteBlogResponse {
  string blog_id = 1;
}

message DeleteBlogRequest {
  string blog_id = 1;
}

message UpdateBlogRequest {
  string blog_id = 1;
  string content = 2;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message CreateBlogRequest {
  NewBlog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message NewBlog {
  string author = 1;
  string title = 2;
  string content = 3;
}

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message ListBlogRequest { }

message ListBlogResponse {
  Blog blog = 1;
}
